--- a/package.json
+++ b/package.json
@@ -109,11 +109,13 @@
     }
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
@@ -131,6 +133,7 @@
     "@types/webpack-bundle-analyzer": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
     "concurrently": "^7.3.0",
