--- a/package.json
+++ b/package.json
@@ -109,7 +109,11 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.6",
+    "@uiball/loaders": "^1.2.6",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
